<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

    <ImageView
        android:id="@+id/logo_light_theme"
        android:layout_width="74dp"
        android:layout_height="81dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:background="@drawable/logo_dark_theme"
        android:contentDescription="@string/letters_logo_description" />

    <ImageView
        android:id="@+id/letters_light_theme"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/letters_light_theme"
        android:contentDescription="@string/letters_logo_description" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:autofillHints="email"
        android:background="@drawable/edit_text_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_accent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorItemLight"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/register_message"
        android:stateListAnimator="@null"
        android:text="@string/register_message"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>